<resources>
    <string name="app_name">Women Safety Application</string>
    <string name="register_new_user">Register New User</string>
    <string name="button_text_send">Register User</string>
    <string name="button_add_new_contact">Add Contact</string>
    <string name="string_hint_phone_number">Phone Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_enter_code">Enter Code</string>
    <string name="string_button_verify">Verify</string>
    <string name="string_contact_name">Name</string>
    <string name="string_contact_phone_number">Phone Number</string>
    <string name="string_button_save">Save</string>
    <string name="string_delete_contact">Delete Contact</string>
    <string name="string_add_contact_image_descriptoin">Add Person</string>
    <string name="string_image_button_delete_description">Delete Contact</string>
    <string name="string_empty_list_add_your_emergency_contacts">Add an Emergency Contact</string>
    <string name="string_label_contacts_show">Contacts List</string>
    <string name="string_label_gps_not_on">GPS TURNED OFF!</string>
    <string name="string_label_add_new_contact">Add New Contact</string>
</resources>
