<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".UserRegistration"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_new_user"
        android:textSize="30dp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/arsenal"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:layout_marginTop="20sp"
        android:id="@+id/edittext_registration_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:fontFamily="@font/arsenal"
        android:hint="@string/string_hint_phone_number"
        android:inputType="phone"
        android:letterSpacing=".2"
        android:gravity="center_horizontal"
        android:maxLength="15"
        android:textColor="@android:color/white"
        android:textCursorDrawable="@null"
        android:textSize="17sp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        style="?android:attr/borderlessButtonStyle"
        android:background="#171716"
        android:text="@string/button_text_send"
        android:fontFamily="@font/arsenal"
        android:textAllCaps="false"
        android:paddingLeft="15dp"
        android:textSize="18sp"
        android:paddingRight="15dp"
        android:textColor="@android:color/white" />




</LinearLayout>