<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".UserRegistration"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_new_user"
        android:textSize="30dp"
        android:textColor="@android:color/darker_gray"
        android:fontFamily="@font/arsenal"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/edittext_secret_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="8"
        android:fontFamily="@font/arsenal"
        android:hint="@string/string_enter_code"
        android:inputType="number"
        android:letterSpacing=".3"
        android:gravity="center_horizontal"
        android:maxLength="6"
        android:textColor="@android:color/white"
        android:textCursorDrawable="@null"
        android:textSize="17sp" />

    <Button
        android:id="@+id/button_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        style="?android:attr/borderlessButtonStyle"
        android:background="#171716"
        android:text="@string/string_button_verify"
        android:fontFamily="@font/arsenal"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <ProgressBar
        android:visibility="visible"
        android:id="@+id/progress_auth"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>