<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/id_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/button_add_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:background="#121111"
            android:contentDescription="@string/string_add_contact_image_descriptoin"
            android:padding="10dp"
            android:src="@drawable/ic_person_add_white_24dp"
            android:textAllCaps="false" />

        <ImageView
            android:layout_width="83dp"
            android:layout_height="68dp"
            android:layout_marginStart="79dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="101dp"
            android:layout_toStartOf="@+id/button_delete_contact"
            android:layout_toEndOf="@+id/button_add_contact"
            android:background="@drawable/womenlogo" />

        <ImageButton
            android:id="@+id/button_delete_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="#121111"
            android:contentDescription="@string/string_image_button_delete_description"
            android:padding="10dp"
            android:src="@drawable/ic_delete_forever_white_24dp"
            android:textAllCaps="false" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView_label_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_buttons_layout"
        android:background="#121111"
        android:fontFamily="@font/arsenal"
        android:gravity="center"
        android:text="@string/string_label_contacts_show"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/list_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_label_contacts"
        android:clipToPadding="false"
        android:paddingBottom="15dp" />

    <RelativeLayout
        android:id="@+id/when_empty_list"
        android:layout_below="@id/textView_label_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/empty_list_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="#121111"
            android:contentDescription="@string/string_add_contact_image_descriptoin"
            android:padding="15dp"
            android:src="@drawable/ic_add_circle_white_24dp"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arsenal"
            android:layout_below="@+id/empty_list_add_button"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:text="@string/string_empty_list_add_your_emergency_contacts"
            android:textColor="@android:color/white" />

    </RelativeLayout>
    <TextView
        android:id="@+id/textView_label_gps_required"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF5722"
        android:fontFamily="@font/arsenal"
        android:gravity="center"
        android:text="@string/string_label_gps_not_on"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"
        android:textSize="15sp" />

</RelativeLayout>