<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewContactFragment"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/id_label_new_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="#000000"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/string_label_add_new_contact"
        android:textSize="25sp"
        android:fontFamily="@font/arsenal"
        />

    <EditText
        android:id="@+id/edittext_contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/id_label_new_contact"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:fontFamily="@font/arsenal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/string_contact_name"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textColor="@android:color/darker_gray"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/editText_default_text_size" />

    <EditText
        android:id="@+id/edittext_contact_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_contact_name"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/arsenal"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/string_contact_phone_number"
        android:inputType="phone"
        android:digits=" ()-+0123456789"
        android:maxLength="15"
        android:textColor="@android:color/darker_gray"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/editText_default_text_size" />

    <Button
        android:id="@+id/button_add_from_phonebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_contact_phoneNumber"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="#000000"
        android:drawableLeft="@drawable/local_phone_white_24dp"
        android:fontFamily="@font/arsenal"
        android:padding="10dp"
        android:text="PhoneBook"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#000000"
        android:padding="10dp"
        android:src="@drawable/ic_done_white_24dp" />

</RelativeLayout>